# ua-ovdp-plugin

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  scraper.py  server.py
.claude-plugin/: marketplace.json  plugin.json
docs/: session-2026-07-10-nkd-i-stale-price-fixes.md
engine/: serialize.py  settings.py
engine/investment/domain/: models.py
engine/investment/forecast/: finance.py  forecast_core.py  math_core.py  strategy.py
engine/investment/portfolio/: engine.py  monthly_allocator.py  optimizer.py  result_models.py  simulator.py
engine/schemas/: analytics_schemas.py  bond_schemas.py  portfolio_schemas.py
engine/services/: analytics_service.py  market_bridge.py  portfolio_service.py
skills/: README.md
