[project]
name = "ua-ovdp-plugin"
version = "0.1.0"
description = "MCP server exposing the Ukrainian OVDP (ovdp.in.ua + Privat24 + Inzhur) to Claude Code."
readme = "README.md"

requires-python = ">=3.10"
license = { text = "MIT" }

# Versions intentionally left loose except mcp (tested against 1.28.x). Pin later if needed.
dependencies = [
    "python-dotenv==1.2.2",
    "python-dateutil>=2.9.0",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.2",
    "playwright",
    "beautifulsoup4==4.15.0",
    "scipy>=1.12.0",
    "loguru==0.7.3",
    "mcp>=1.28.0",
]
